// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Product object can filter 1`] = `
Array [
  Object {
    "__typename": "Product",
    "id": "UHJvZHVjdDo4NA==",
    "name": "Seaman Beer",
    "pricing": Object {
      "__typename": "ProductPricingInfo",
      "onSale": false,
      "priceRange": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 3.2,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 3.2,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 3.2,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 3.2,
            "currency": "USD",
          },
        },
      },
      "priceRangeUndiscounted": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 3.2,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 3.2,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 3.2,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 3.2,
            "currency": "USD",
          },
        },
      },
    },
    "thumbnail": Object {
      "__typename": "Image",
      "alt": "",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_beer-01_1_Xm3ASfo-thumbnail-255x255.png",
    },
    "thumbnail2x": Object {
      "__typename": "Image",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_beer-01_1_Xm3ASfo-thumbnail-510x510.png",
    },
  },
]
`;

exports[`Product object can get a list of products 1`] = `
Array [
  Object {
    "__typename": "Product",
    "id": "UHJvZHVjdDo3Mg==",
    "name": "Apple Juice",
    "pricing": Object {
      "__typename": "ProductPricingInfo",
      "onSale": true,
      "priceRange": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 1.5,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 1.5,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 3.5,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 3.5,
            "currency": "USD",
          },
        },
      },
      "priceRangeUndiscounted": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 3,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 3,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 7,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 7,
            "currency": "USD",
          },
        },
      },
    },
    "thumbnail": Object {
      "__typename": "Image",
      "alt": "",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_fd_juice_06_rNQ3p2L-thumbnail-255x255.png",
    },
    "thumbnail2x": Object {
      "__typename": "Image",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_fd_juice_06_rNQ3p2L-thumbnail-510x510.png",
    },
  },
  Object {
    "__typename": "Product",
    "id": "UHJvZHVjdDo3NA==",
    "name": "Banana Juice",
    "pricing": Object {
      "__typename": "ProductPricingInfo",
      "onSale": true,
      "priceRange": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 2.1,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 2.1,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 4.9,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 4.9,
            "currency": "USD",
          },
        },
      },
      "priceRangeUndiscounted": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 3,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 3,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 7,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 7,
            "currency": "USD",
          },
        },
      },
    },
    "thumbnail": Object {
      "__typename": "Image",
      "alt": "",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_fd_juice_01_J9ZIGUm-thumbnail-255x255.png",
    },
    "thumbnail2x": Object {
      "__typename": "Image",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_fd_juice_01_J9ZIGUm-thumbnail-510x510.png",
    },
  },
  Object {
    "__typename": "Product",
    "id": "UHJvZHVjdDo3OQ==",
    "name": "Bean Juice",
    "pricing": Object {
      "__typename": "ProductPricingInfo",
      "onSale": false,
      "priceRange": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 3,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 3,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 7,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 7,
            "currency": "USD",
          },
        },
      },
      "priceRangeUndiscounted": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 3,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 3,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 7,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 7,
            "currency": "USD",
          },
        },
      },
    },
    "thumbnail": Object {
      "__typename": "Image",
      "alt": "",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_fd_juice_02_dNXPoKS-thumbnail-255x255.png",
    },
    "thumbnail2x": Object {
      "__typename": "Image",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_fd_juice_02_dNXPoKS-thumbnail-510x510.png",
    },
  },
  Object {
    "__typename": "Product",
    "id": "UHJvZHVjdDoxMTU=",
    "name": "Black Hoodie",
    "pricing": Object {
      "__typename": "ProductPricingInfo",
      "onSale": false,
      "priceRange": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
        },
      },
      "priceRangeUndiscounted": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
        },
      },
    },
    "thumbnail": Object {
      "__typename": "Image",
      "alt": "",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_cl_bogo01_1_7OtJd0E-thumbnail-255x255.png",
    },
    "thumbnail2x": Object {
      "__typename": "Image",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_cl_bogo01_1_7OtJd0E-thumbnail-510x510.png",
    },
  },
  Object {
    "__typename": "Product",
    "id": "UHJvZHVjdDoxMTY=",
    "name": "Blue Hoodie",
    "pricing": Object {
      "__typename": "ProductPricingInfo",
      "onSale": false,
      "priceRange": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
        },
      },
      "priceRangeUndiscounted": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
        },
      },
    },
    "thumbnail": Object {
      "__typename": "Image",
      "alt": "",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_cl_bogo02_1_mtuuFZd-thumbnail-255x255.png",
    },
    "thumbnail2x": Object {
      "__typename": "Image",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_cl_bogo02_1_mtuuFZd-thumbnail-510x510.png",
    },
  },
  Object {
    "__typename": "Product",
    "id": "UHJvZHVjdDo3Mw==",
    "name": "Carrot Juice",
    "pricing": Object {
      "__typename": "ProductPricingInfo",
      "onSale": true,
      "priceRange": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 2.1,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 2.1,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 4.9,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 4.9,
            "currency": "USD",
          },
        },
      },
      "priceRangeUndiscounted": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 3,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 3,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 7,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 7,
            "currency": "USD",
          },
        },
      },
    },
    "thumbnail": Object {
      "__typename": "Image",
      "alt": "",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_fd_juice_05_DTTYkvi-thumbnail-255x255.png",
    },
    "thumbnail2x": Object {
      "__typename": "Image",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_fd_juice_05_DTTYkvi-thumbnail-510x510.png",
    },
  },
  Object {
    "__typename": "Product",
    "id": "UHJvZHVjdDo3Ng==",
    "name": "Coconut Juice",
    "pricing": Object {
      "__typename": "ProductPricingInfo",
      "onSale": false,
      "priceRange": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 3,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 3,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 7,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 7,
            "currency": "USD",
          },
        },
      },
      "priceRangeUndiscounted": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 3,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 3,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 7,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 7,
            "currency": "USD",
          },
        },
      },
    },
    "thumbnail": Object {
      "__typename": "Image",
      "alt": "",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_fd_juice_02_QIDA8OA-thumbnail-255x255.png",
    },
    "thumbnail2x": Object {
      "__typename": "Image",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_fd_juice_02_QIDA8OA-thumbnail-510x510.png",
    },
  },
  Object {
    "__typename": "Product",
    "id": "UHJvZHVjdDo4OQ==",
    "name": "Code Division T-shirt",
    "pricing": Object {
      "__typename": "ProductPricingInfo",
      "onSale": true,
      "priceRange": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 15,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 15,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 15,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 15,
            "currency": "USD",
          },
        },
      },
      "priceRangeUndiscounted": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
        },
      },
    },
    "thumbnail": Object {
      "__typename": "Image",
      "alt": "",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_cl_boot07_1_6fpPNVh-thumbnail-255x255.png",
    },
    "thumbnail2x": Object {
      "__typename": "Image",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_cl_boot07_1_6fpPNVh-thumbnail-510x510.png",
    },
  },
  Object {
    "__typename": "Product",
    "id": "UHJvZHVjdDo4NQ==",
    "name": "Colored Parrot Cushion",
    "pricing": Object {
      "__typename": "ProductPricingInfo",
      "onSale": true,
      "priceRange": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 14,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 14,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 14,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 14,
            "currency": "USD",
          },
        },
      },
      "priceRangeUndiscounted": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 20,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 20,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 20,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 20,
            "currency": "USD",
          },
        },
      },
    },
    "thumbnail": Object {
      "__typename": "Image",
      "alt": "",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_cuschion01_OwvcN0G-thumbnail-255x255.png",
    },
    "thumbnail2x": Object {
      "__typename": "Image",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_cuschion01_OwvcN0G-thumbnail-510x510.png",
    },
  },
  Object {
    "__typename": "Product",
    "id": "UHJvZHVjdDo3OA==",
    "name": "Green Juice",
    "pricing": Object {
      "__typename": "ProductPricingInfo",
      "onSale": false,
      "priceRange": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 3,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 3,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 7,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 7,
            "currency": "USD",
          },
        },
      },
      "priceRangeUndiscounted": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 3,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 3,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 7,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 7,
            "currency": "USD",
          },
        },
      },
    },
    "thumbnail": Object {
      "__typename": "Image",
      "alt": "",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_fd_juice_04_7oQrJLO-thumbnail-255x255.png",
    },
    "thumbnail2x": Object {
      "__typename": "Image",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_fd_juice_04_7oQrJLO-thumbnail-510x510.png",
    },
  },
  Object {
    "__typename": "Product",
    "id": "UHJvZHVjdDo2NQ==",
    "name": "Hyperspace Turquoise Paint",
    "pricing": Object {
      "__typename": "ProductPricingInfo",
      "onSale": false,
      "priceRange": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 15,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 15,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 49,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 49,
            "currency": "USD",
          },
        },
      },
      "priceRangeUndiscounted": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 15,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 15,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 49,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 49,
            "currency": "USD",
          },
        },
      },
    },
    "thumbnail": Object {
      "__typename": "Image",
      "alt": "",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_paints_05_gjPaSR4-thumbnail-255x255.png",
    },
    "thumbnail2x": Object {
      "__typename": "Image",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_paints_05_gjPaSR4-thumbnail-510x510.png",
    },
  },
  Object {
    "__typename": "Product",
    "id": "UHJvZHVjdDo2NA==",
    "name": "Light Speed Yellow Paint",
    "pricing": Object {
      "__typename": "ProductPricingInfo",
      "onSale": false,
      "priceRange": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 15,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 15,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 49,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 49,
            "currency": "USD",
          },
        },
      },
      "priceRangeUndiscounted": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 15,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 15,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 49,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 49,
            "currency": "USD",
          },
        },
      },
    },
    "thumbnail": Object {
      "__typename": "Image",
      "alt": "",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_paints_04_GvNFg0d-thumbnail-255x255.png",
    },
    "thumbnail2x": Object {
      "__typename": "Image",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_paints_04_GvNFg0d-thumbnail-510x510.png",
    },
  },
  Object {
    "__typename": "Product",
    "id": "UHJvZHVjdDoxMTc=",
    "name": "Mustard Hoodie",
    "pricing": Object {
      "__typename": "ProductPricingInfo",
      "onSale": false,
      "priceRange": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
        },
      },
      "priceRangeUndiscounted": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
        },
      },
    },
    "thumbnail": Object {
      "__typename": "Image",
      "alt": "",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_cl_bogo03_1_5oIGLwh-thumbnail-255x255.png",
    },
    "thumbnail2x": Object {
      "__typename": "Image",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_cl_bogo03_1_5oIGLwh-thumbnail-510x510.png",
    },
  },
  Object {
    "__typename": "Product",
    "id": "UHJvZHVjdDo2MQ==",
    "name": "Nebula Night Sky Paint",
    "pricing": Object {
      "__typename": "ProductPricingInfo",
      "onSale": true,
      "priceRange": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 7.5,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 7.5,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 24.5,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 24.5,
            "currency": "USD",
          },
        },
      },
      "priceRangeUndiscounted": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 15,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 15,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 49,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 49,
            "currency": "USD",
          },
        },
      },
    },
    "thumbnail": Object {
      "__typename": "Image",
      "alt": "",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_paints_01_6LpQlok-thumbnail-255x255.png",
    },
    "thumbnail2x": Object {
      "__typename": "Image",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_paints_01_6LpQlok-thumbnail-510x510.png",
    },
  },
  Object {
    "__typename": "Product",
    "id": "UHJvZHVjdDo3MQ==",
    "name": "Orange Juice",
    "pricing": Object {
      "__typename": "ProductPricingInfo",
      "onSale": false,
      "priceRange": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 3,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 3,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 7,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 7,
            "currency": "USD",
          },
        },
      },
      "priceRangeUndiscounted": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 3,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 3,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 7,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 7,
            "currency": "USD",
          },
        },
      },
    },
    "thumbnail": Object {
      "__typename": "Image",
      "alt": "",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_fd_juice_06_kSvxjiY-thumbnail-255x255.png",
    },
    "thumbnail2x": Object {
      "__typename": "Image",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_fd_juice_06_kSvxjiY-thumbnail-510x510.png",
    },
  },
  Object {
    "__typename": "Product",
    "id": "UHJvZHVjdDo3NQ==",
    "name": "Pineapple Juice",
    "pricing": Object {
      "__typename": "ProductPricingInfo",
      "onSale": false,
      "priceRange": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 3,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 3,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 7,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 7,
            "currency": "USD",
          },
        },
      },
      "priceRangeUndiscounted": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 3,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 3,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 7,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 7,
            "currency": "USD",
          },
        },
      },
    },
    "thumbnail": Object {
      "__typename": "Image",
      "alt": "",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_fd_juice_03_Dm20IHL-thumbnail-255x255.png",
    },
    "thumbnail2x": Object {
      "__typename": "Image",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_fd_juice_03_Dm20IHL-thumbnail-510x510.png",
    },
  },
  Object {
    "__typename": "Product",
    "id": "UHJvZHVjdDoxMDc=",
    "name": "Polo Shirt",
    "pricing": Object {
      "__typename": "ProductPricingInfo",
      "onSale": false,
      "priceRange": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
        },
      },
      "priceRangeUndiscounted": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
        },
      },
    },
    "thumbnail": Object {
      "__typename": "Image",
      "alt": "",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_cl_polo01_FToBvZU-thumbnail-255x255.png",
    },
    "thumbnail2x": Object {
      "__typename": "Image",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_cl_polo01_FToBvZU-thumbnail-510x510.png",
    },
  },
  Object {
    "__typename": "Product",
    "id": "UHJvZHVjdDoxMDg=",
    "name": "Polo Shirt",
    "pricing": Object {
      "__typename": "ProductPricingInfo",
      "onSale": false,
      "priceRange": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
        },
      },
      "priceRangeUndiscounted": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
        },
      },
    },
    "thumbnail": Object {
      "__typename": "Image",
      "alt": "",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_cl_polo02_lbHaoxr-thumbnail-255x255.png",
    },
    "thumbnail2x": Object {
      "__typename": "Image",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_cl_polo02_lbHaoxr-thumbnail-510x510.png",
    },
  },
  Object {
    "__typename": "Product",
    "id": "UHJvZHVjdDoxMDk=",
    "name": "Polo Shirt",
    "pricing": Object {
      "__typename": "ProductPricingInfo",
      "onSale": false,
      "priceRange": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
        },
      },
      "priceRangeUndiscounted": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
        },
      },
    },
    "thumbnail": Object {
      "__typename": "Image",
      "alt": "",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_cl_polo03-woman_qawp9o9-thumbnail-255x255.png",
    },
    "thumbnail2x": Object {
      "__typename": "Image",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_cl_polo03-woman_qawp9o9-thumbnail-510x510.png",
    },
  },
  Object {
    "__typename": "Product",
    "id": "UHJvZHVjdDoxMTA=",
    "name": "Polo Shirt",
    "pricing": Object {
      "__typename": "ProductPricingInfo",
      "onSale": false,
      "priceRange": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
        },
      },
      "priceRangeUndiscounted": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
        },
      },
    },
    "thumbnail": Object {
      "__typename": "Image",
      "alt": "",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_cl_polo04-woman_ySmLKP2-thumbnail-255x255.png",
    },
    "thumbnail2x": Object {
      "__typename": "Image",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_cl_polo04-woman_ySmLKP2-thumbnail-510x510.png",
    },
  },
]
`;

exports[`Product object can get new page 1`] = `
Array [
  Object {
    "__typename": "Product",
    "id": "UHJvZHVjdDo3Mg==",
    "name": "Apple Juice",
    "pricing": Object {
      "__typename": "ProductPricingInfo",
      "onSale": true,
      "priceRange": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 1.5,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 1.5,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 3.5,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 3.5,
            "currency": "USD",
          },
        },
      },
      "priceRangeUndiscounted": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 3,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 3,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 7,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 7,
            "currency": "USD",
          },
        },
      },
    },
    "thumbnail": Object {
      "__typename": "Image",
      "alt": "",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_fd_juice_06_rNQ3p2L-thumbnail-255x255.png",
    },
    "thumbnail2x": Object {
      "__typename": "Image",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_fd_juice_06_rNQ3p2L-thumbnail-510x510.png",
    },
  },
]
`;

exports[`Product object can get new page 2`] = `
Array [
  Object {
    "__typename": "Product",
    "id": "UHJvZHVjdDo3Mg==",
    "name": "Apple Juice",
    "pricing": Object {
      "__typename": "ProductPricingInfo",
      "onSale": true,
      "priceRange": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 1.5,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 1.5,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 3.5,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 3.5,
            "currency": "USD",
          },
        },
      },
      "priceRangeUndiscounted": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 3,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 3,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 7,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 7,
            "currency": "USD",
          },
        },
      },
    },
    "thumbnail": Object {
      "__typename": "Image",
      "alt": "",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_fd_juice_06_rNQ3p2L-thumbnail-255x255.png",
    },
    "thumbnail2x": Object {
      "__typename": "Image",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_fd_juice_06_rNQ3p2L-thumbnail-510x510.png",
    },
  },
  Object {
    "__typename": "Product",
    "id": "UHJvZHVjdDo3NA==",
    "name": "Banana Juice",
    "pricing": Object {
      "__typename": "ProductPricingInfo",
      "onSale": true,
      "priceRange": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 2.1,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 2.1,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 4.9,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 4.9,
            "currency": "USD",
          },
        },
      },
      "priceRangeUndiscounted": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 3,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 3,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 7,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 7,
            "currency": "USD",
          },
        },
      },
    },
    "thumbnail": Object {
      "__typename": "Image",
      "alt": "",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_fd_juice_01_J9ZIGUm-thumbnail-255x255.png",
    },
    "thumbnail2x": Object {
      "__typename": "Image",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_fd_juice_01_J9ZIGUm-thumbnail-510x510.png",
    },
  },
]
`;

exports[`Product object can sort 1`] = `
Array [
  Object {
    "__typename": "Product",
    "id": "UHJvZHVjdDo4Nw==",
    "name": "Yellow Plimsolls",
    "pricing": Object {
      "__typename": "ProductPricingInfo",
      "onSale": false,
      "priceRange": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 59,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 59,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 59,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 59,
            "currency": "USD",
          },
        },
      },
      "priceRangeUndiscounted": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 59,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 59,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 59,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 59,
            "currency": "USD",
          },
        },
      },
    },
    "thumbnail": Object {
      "__typename": "Image",
      "alt": "",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_sneakers_01_1_hxdEA8I-thumbnail-255x255.png",
    },
    "thumbnail2x": Object {
      "__typename": "Image",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_sneakers_01_1_hxdEA8I-thumbnail-510x510.png",
    },
  },
  Object {
    "__typename": "Product",
    "id": "UHJvZHVjdDo4Mg==",
    "name": "White Wine",
    "pricing": Object {
      "__typename": "ProductPricingInfo",
      "onSale": true,
      "priceRange": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 10.5,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 10.5,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 10.5,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 10.5,
            "currency": "USD",
          },
        },
      },
      "priceRangeUndiscounted": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 15,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 15,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 15,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 15,
            "currency": "USD",
          },
        },
      },
    },
    "thumbnail": Object {
      "__typename": "Image",
      "alt": "",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_wine-white_2TRD3SA-thumbnail-255x255.png",
    },
    "thumbnail2x": Object {
      "__typename": "Image",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_wine-white_2TRD3SA-thumbnail-510x510.png",
    },
  },
  Object {
    "__typename": "Product",
    "id": "UHJvZHVjdDo4OA==",
    "name": "White Plimsolls",
    "pricing": Object {
      "__typename": "ProductPricingInfo",
      "onSale": true,
      "priceRange": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 34.3,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 34.3,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 34.3,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 34.3,
            "currency": "USD",
          },
        },
      },
      "priceRangeUndiscounted": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 49,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 49,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 49,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 49,
            "currency": "USD",
          },
        },
      },
    },
    "thumbnail": Object {
      "__typename": "Image",
      "alt": "",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_sneakers_02_1_LKgUR6b-thumbnail-255x255.png",
    },
    "thumbnail2x": Object {
      "__typename": "Image",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_sneakers_02_1_LKgUR6b-thumbnail-510x510.png",
    },
  },
  Object {
    "__typename": "Product",
    "id": "UHJvZHVjdDo4Ng==",
    "name": "White Parrot Cushion",
    "pricing": Object {
      "__typename": "ProductPricingInfo",
      "onSale": true,
      "priceRange": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 10,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 10,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 10,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 10,
            "currency": "USD",
          },
        },
      },
      "priceRangeUndiscounted": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 20,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 20,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 20,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 20,
            "currency": "USD",
          },
        },
      },
    },
    "thumbnail": Object {
      "__typename": "Image",
      "alt": "",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_cuschion02_2rlBRlJ-thumbnail-255x255.png",
    },
    "thumbnail2x": Object {
      "__typename": "Image",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_cuschion02_2rlBRlJ-thumbnail-510x510.png",
    },
  },
  Object {
    "__typename": "Product",
    "id": "UHJvZHVjdDoxMTg=",
    "name": "White Hoodie",
    "pricing": Object {
      "__typename": "ProductPricingInfo",
      "onSale": true,
      "priceRange": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 24,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 24,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 24,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 24,
            "currency": "USD",
          },
        },
      },
      "priceRangeUndiscounted": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
        },
      },
    },
    "thumbnail": Object {
      "__typename": "Image",
      "alt": "",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_cl_bogo04_1_WF6PBIr-thumbnail-255x255.png",
    },
    "thumbnail2x": Object {
      "__typename": "Image",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_cl_bogo04_1_WF6PBIr-thumbnail-510x510.png",
    },
  },
  Object {
    "__typename": "Product",
    "id": "UHJvZHVjdDoxMTM=",
    "name": "T-shirt",
    "pricing": Object {
      "__typename": "ProductPricingInfo",
      "onSale": false,
      "priceRange": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
        },
      },
      "priceRangeUndiscounted": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
        },
      },
    },
    "thumbnail": Object {
      "__typename": "Image",
      "alt": "",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_cl_boot06_1_nmEaaA2-thumbnail-255x255.png",
    },
    "thumbnail2x": Object {
      "__typename": "Image",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_cl_boot06_1_nmEaaA2-thumbnail-510x510.png",
    },
  },
  Object {
    "__typename": "Product",
    "id": "UHJvZHVjdDoxMTQ=",
    "name": "T-shirt",
    "pricing": Object {
      "__typename": "ProductPricingInfo",
      "onSale": true,
      "priceRange": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 21,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 21,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 21,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 21,
            "currency": "USD",
          },
        },
      },
      "priceRangeUndiscounted": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
        },
      },
    },
    "thumbnail": Object {
      "__typename": "Image",
      "alt": "",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_cl_boot06_1_JLjTmBu-thumbnail-255x255.png",
    },
    "thumbnail2x": Object {
      "__typename": "Image",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_cl_boot06_1_JLjTmBu-thumbnail-510x510.png",
    },
  },
  Object {
    "__typename": "Product",
    "id": "UHJvZHVjdDoxMTE=",
    "name": "T-shirt",
    "pricing": Object {
      "__typename": "ProductPricingInfo",
      "onSale": false,
      "priceRange": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
        },
      },
      "priceRangeUndiscounted": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
        },
      },
    },
    "thumbnail": Object {
      "__typename": "Image",
      "alt": "",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_cl_boot01_1_fAUPll8-thumbnail-255x255.png",
    },
    "thumbnail2x": Object {
      "__typename": "Image",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_cl_boot01_1_fAUPll8-thumbnail-510x510.png",
    },
  },
  Object {
    "__typename": "Product",
    "id": "UHJvZHVjdDoxMTI=",
    "name": "T-shirt",
    "pricing": Object {
      "__typename": "ProductPricingInfo",
      "onSale": true,
      "priceRange": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 21,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 21,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 21,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 21,
            "currency": "USD",
          },
        },
      },
      "priceRangeUndiscounted": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
        },
      },
    },
    "thumbnail": Object {
      "__typename": "Image",
      "alt": "",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_cl_boot03_1_pOwMuDe-thumbnail-255x255.png",
    },
    "thumbnail2x": Object {
      "__typename": "Image",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_cl_boot03_1_pOwMuDe-thumbnail-510x510.png",
    },
  },
  Object {
    "__typename": "Product",
    "id": "UHJvZHVjdDo2Mg==",
    "name": "Space Dust Navy Paint",
    "pricing": Object {
      "__typename": "ProductPricingInfo",
      "onSale": true,
      "priceRange": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 10.5,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 10.5,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 34.3,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 34.3,
            "currency": "USD",
          },
        },
      },
      "priceRangeUndiscounted": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 15,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 15,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 49,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 49,
            "currency": "USD",
          },
        },
      },
    },
    "thumbnail": Object {
      "__typename": "Image",
      "alt": "",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_paints_02_L3fFEsO-thumbnail-255x255.png",
    },
    "thumbnail2x": Object {
      "__typename": "Image",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_paints_02_L3fFEsO-thumbnail-510x510.png",
    },
  },
  Object {
    "__typename": "Product",
    "id": "UHJvZHVjdDo4Mw==",
    "name": "Seaman Lager",
    "pricing": Object {
      "__typename": "ProductPricingInfo",
      "onSale": false,
      "priceRange": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 3,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 3,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 3,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 3,
            "currency": "USD",
          },
        },
      },
      "priceRangeUndiscounted": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 3,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 3,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 3,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 3,
            "currency": "USD",
          },
        },
      },
    },
    "thumbnail": Object {
      "__typename": "Image",
      "alt": "",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_beer-02_1_MfJxlF6-thumbnail-255x255.png",
    },
    "thumbnail2x": Object {
      "__typename": "Image",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_beer-02_1_MfJxlF6-thumbnail-510x510.png",
    },
  },
  Object {
    "__typename": "Product",
    "id": "UHJvZHVjdDo4NA==",
    "name": "Seaman Beer",
    "pricing": Object {
      "__typename": "ProductPricingInfo",
      "onSale": false,
      "priceRange": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 3.2,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 3.2,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 3.2,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 3.2,
            "currency": "USD",
          },
        },
      },
      "priceRangeUndiscounted": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 3.2,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 3.2,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 3.2,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 3.2,
            "currency": "USD",
          },
        },
      },
    },
    "thumbnail": Object {
      "__typename": "Image",
      "alt": "",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_beer-01_1_Xm3ASfo-thumbnail-255x255.png",
    },
    "thumbnail2x": Object {
      "__typename": "Image",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_beer-01_1_Xm3ASfo-thumbnail-510x510.png",
    },
  },
  Object {
    "__typename": "Product",
    "id": "UHJvZHVjdDo4MQ==",
    "name": "Red Wine",
    "pricing": Object {
      "__typename": "ProductPricingInfo",
      "onSale": true,
      "priceRange": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 10.5,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 10.5,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 10.5,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 10.5,
            "currency": "USD",
          },
        },
      },
      "priceRangeUndiscounted": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 15,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 15,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 15,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 15,
            "currency": "USD",
          },
        },
      },
    },
    "thumbnail": Object {
      "__typename": "Image",
      "alt": "",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_wine-red_wIUnzz5-thumbnail-255x255.png",
    },
    "thumbnail2x": Object {
      "__typename": "Image",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_wine-red_wIUnzz5-thumbnail-510x510.png",
    },
  },
  Object {
    "__typename": "Product",
    "id": "UHJvZHVjdDo2Mw==",
    "name": "Red Dwarf Red Paint",
    "pricing": Object {
      "__typename": "ProductPricingInfo",
      "onSale": false,
      "priceRange": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 15,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 15,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 49,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 49,
            "currency": "USD",
          },
        },
      },
      "priceRangeUndiscounted": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 15,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 15,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 49,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 49,
            "currency": "USD",
          },
        },
      },
    },
    "thumbnail": Object {
      "__typename": "Image",
      "alt": "",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_paints_03_iwBuqNE-thumbnail-255x255.png",
    },
    "thumbnail2x": Object {
      "__typename": "Image",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_paints_03_iwBuqNE-thumbnail-510x510.png",
    },
  },
  Object {
    "__typename": "Product",
    "id": "UHJvZHVjdDo3Nw==",
    "name": "Power Juice",
    "pricing": Object {
      "__typename": "ProductPricingInfo",
      "onSale": true,
      "priceRange": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 2.1,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 2.1,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 4.9,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 4.9,
            "currency": "USD",
          },
        },
      },
      "priceRangeUndiscounted": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 3,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 3,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 7,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 7,
            "currency": "USD",
          },
        },
      },
    },
    "thumbnail": Object {
      "__typename": "Image",
      "alt": "",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_fd_juice_03_fErMlrA-thumbnail-255x255.png",
    },
    "thumbnail2x": Object {
      "__typename": "Image",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_fd_juice_03_fErMlrA-thumbnail-510x510.png",
    },
  },
  Object {
    "__typename": "Product",
    "id": "UHJvZHVjdDoxMTA=",
    "name": "Polo Shirt",
    "pricing": Object {
      "__typename": "ProductPricingInfo",
      "onSale": false,
      "priceRange": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
        },
      },
      "priceRangeUndiscounted": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
        },
      },
    },
    "thumbnail": Object {
      "__typename": "Image",
      "alt": "",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_cl_polo04-woman_ySmLKP2-thumbnail-255x255.png",
    },
    "thumbnail2x": Object {
      "__typename": "Image",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_cl_polo04-woman_ySmLKP2-thumbnail-510x510.png",
    },
  },
  Object {
    "__typename": "Product",
    "id": "UHJvZHVjdDoxMDk=",
    "name": "Polo Shirt",
    "pricing": Object {
      "__typename": "ProductPricingInfo",
      "onSale": false,
      "priceRange": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
        },
      },
      "priceRangeUndiscounted": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
        },
      },
    },
    "thumbnail": Object {
      "__typename": "Image",
      "alt": "",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_cl_polo03-woman_qawp9o9-thumbnail-255x255.png",
    },
    "thumbnail2x": Object {
      "__typename": "Image",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_cl_polo03-woman_qawp9o9-thumbnail-510x510.png",
    },
  },
  Object {
    "__typename": "Product",
    "id": "UHJvZHVjdDoxMDg=",
    "name": "Polo Shirt",
    "pricing": Object {
      "__typename": "ProductPricingInfo",
      "onSale": false,
      "priceRange": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
        },
      },
      "priceRangeUndiscounted": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
        },
      },
    },
    "thumbnail": Object {
      "__typename": "Image",
      "alt": "",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_cl_polo02_lbHaoxr-thumbnail-255x255.png",
    },
    "thumbnail2x": Object {
      "__typename": "Image",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_cl_polo02_lbHaoxr-thumbnail-510x510.png",
    },
  },
  Object {
    "__typename": "Product",
    "id": "UHJvZHVjdDoxMDc=",
    "name": "Polo Shirt",
    "pricing": Object {
      "__typename": "ProductPricingInfo",
      "onSale": false,
      "priceRange": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
        },
      },
      "priceRangeUndiscounted": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 30,
            "currency": "USD",
          },
        },
      },
    },
    "thumbnail": Object {
      "__typename": "Image",
      "alt": "",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_cl_polo01_FToBvZU-thumbnail-255x255.png",
    },
    "thumbnail2x": Object {
      "__typename": "Image",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_cl_polo01_FToBvZU-thumbnail-510x510.png",
    },
  },
  Object {
    "__typename": "Product",
    "id": "UHJvZHVjdDo3NQ==",
    "name": "Pineapple Juice",
    "pricing": Object {
      "__typename": "ProductPricingInfo",
      "onSale": false,
      "priceRange": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 3,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 3,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 7,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 7,
            "currency": "USD",
          },
        },
      },
      "priceRangeUndiscounted": Object {
        "__typename": "TaxedMoneyRange",
        "start": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 3,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 3,
            "currency": "USD",
          },
        },
        "stop": Object {
          "__typename": "TaxedMoney",
          "gross": Object {
            "__typename": "Money",
            "amount": 7,
            "currency": "USD",
          },
          "net": Object {
            "__typename": "Money",
            "amount": 7,
            "currency": "USD",
          },
        },
      },
    },
    "thumbnail": Object {
      "__typename": "Image",
      "alt": "",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_fd_juice_03_Dm20IHL-thumbnail-255x255.png",
    },
    "thumbnail2x": Object {
      "__typename": "Image",
      "url": "http://localhost:8000/media/__sized__/products/saleordemoproduct_fd_juice_03_Dm20IHL-thumbnail-510x510.png",
    },
  },
]
`;
